[gd_scene load_steps=20 format=2]

[ext_resource path="res://GUI/Settings/Settings.gd" type="Script" id=1]
[ext_resource path="res://GUI/Settings/Tabs/controls_up.png" type="Texture" id=2]
[ext_resource path="res://GUI/Settings/Tabs/panel.png" type="Texture" id=3]
[ext_resource path="res://GUI/Settings/Tabs/audio_up.png" type="Texture" id=4]
[ext_resource path="res://GUI/Settings/Tabs/visual_up.png" type="Texture" id=5]
[ext_resource path="res://GUI/Settings/Tabs/tabs.png" type="Texture" id=6]
[ext_resource path="res://GUI/Settings/AudioSettings.gd" type="Script" id=7]
[ext_resource path="res://GUI/Settings/slider_bar_texture.png" type="Texture" id=8]
[ext_resource path="res://GUI/Settings/slider_knob_texture.png" type="Texture" id=9]
[ext_resource path="res://GUI/Settings/SpeakerIcon/audio_icon_2.png" type="Texture" id=10]
[ext_resource path="res://GUI/Settings/ItemCollectionMessages.gd" type="Script" id=11]
[ext_resource path="res://Fonts/type_writer.tres" type="DynamicFont" id=12]
[ext_resource path="res://GUI/Settings/box_checked.png" type="Texture" id=13]
[ext_resource path="res://GUI/Settings/box_unchecked.png" type="Texture" id=14]
[ext_resource path="res://GUI/Settings/reset_button_down.png" type="Texture" id=15]
[ext_resource path="res://GUI/Settings/reset_button.png" type="Texture" id=16]
[ext_resource path="res://GUI/Settings/settings_v.tres" type="Theme" id=17]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 120, 8 )

[sub_resource type="StyleBoxTexture" id=2]

[node name="Settings" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Panel" type="TextureRect" parent="."]
margin_left = 135.554
margin_top = 49.9886
margin_right = 381.554
margin_bottom = 239.989
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tabs" type="TextureRect" parent="."]
pause_mode = 2
margin_left = 61.7918
margin_top = 66.3199
margin_right = 136.792
margin_bottom = 157.32
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioSettings" type="Control" parent="."]
pause_mode = 2
margin_right = 500.0
margin_bottom = 282.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioLabel" type="TextureRect" parent="AudioSettings"]
pause_mode = 2
margin_left = 64.0
margin_top = 68.0
margin_right = 137.0
margin_bottom = 89.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Master" type="Control" parent="AudioSettings"]
pause_mode = 2
margin_left = 3.0
margin_top = -1.0
margin_right = 43.0
margin_bottom = 39.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundIcon" type="TextureRect" parent="AudioSettings/Master"]
pause_mode = 2
margin_left = 340.132
margin_top = 74.2168
margin_right = 362.132
margin_bottom = 88.2168
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slider" type="HSlider" parent="AudioSettings/Master"]
pause_mode = 2
margin_left = 212.309
margin_top = 73.3156
margin_right = 334.309
margin_bottom = 89.3156
custom_icons/grabber_disabled = ExtResource( 9 )
custom_icons/grabber_highlight = ExtResource( 9 )
custom_icons/grabber = ExtResource( 9 )
custom_styles/slider = SubResource( 1 )
custom_styles/grabber_area = SubResource( 2 )
max_value = 1.0
step = 0.01
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Setting" type="Label" parent="AudioSettings/Master"]
pause_mode = 2
margin_left = 170.0
margin_top = 77.0
margin_right = 206.0
margin_bottom = 85.0
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Master"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Interface" type="Control" parent="AudioSettings"]
margin_left = 3.0
margin_top = 23.0
margin_right = 43.0
margin_bottom = 63.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundIcon" type="TextureRect" parent="AudioSettings/Interface"]
margin_left = 340.132
margin_top = 74.2168
margin_right = 362.132
margin_bottom = 88.2168
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slider" type="HSlider" parent="AudioSettings/Interface"]
margin_left = 212.058
margin_top = 73.3156
margin_right = 334.058
margin_bottom = 89.3156
custom_icons/grabber_disabled = ExtResource( 9 )
custom_icons/grabber_highlight = ExtResource( 9 )
custom_icons/grabber = ExtResource( 9 )
custom_styles/slider = SubResource( 1 )
custom_styles/grabber_area = SubResource( 2 )
max_value = 1.0
step = 0.01
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Setting" type="Label" parent="AudioSettings/Interface"]
margin_left = 153.0
margin_top = 77.0
margin_right = 207.0
margin_bottom = 85.0
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Interface"

[node name="Music" type="Control" parent="AudioSettings"]
margin_left = 3.0
margin_top = 47.0
margin_right = 43.0
margin_bottom = 87.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundIcon" type="TextureRect" parent="AudioSettings/Music"]
margin_left = 340.132
margin_top = 74.2168
margin_right = 362.132
margin_bottom = 88.2168
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slider" type="HSlider" parent="AudioSettings/Music"]
margin_left = 212.058
margin_top = 73.3156
margin_right = 334.058
margin_bottom = 89.3156
custom_icons/grabber_disabled = ExtResource( 9 )
custom_icons/grabber_highlight = ExtResource( 9 )
custom_icons/grabber = ExtResource( 9 )
custom_styles/slider = SubResource( 1 )
custom_styles/grabber_area = SubResource( 2 )
max_value = 1.0
step = 0.01
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Setting" type="Label" parent="AudioSettings/Music"]
margin_left = 177.0
margin_top = 77.0
margin_right = 207.0
margin_bottom = 85.0
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Music"

[node name="World" type="Control" parent="AudioSettings"]
margin_left = 3.0
margin_top = 71.0
margin_right = 43.0
margin_bottom = 111.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundIcon" type="TextureRect" parent="AudioSettings/World"]
margin_left = 340.132
margin_top = 74.2168
margin_right = 362.132
margin_bottom = 88.2168
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slider" type="HSlider" parent="AudioSettings/World"]
margin_left = 212.058
margin_top = 73.3156
margin_right = 334.058
margin_bottom = 89.3156
custom_icons/grabber_disabled = ExtResource( 9 )
custom_icons/grabber_highlight = ExtResource( 9 )
custom_icons/grabber = ExtResource( 9 )
custom_styles/slider = SubResource( 1 )
custom_styles/grabber_area = SubResource( 2 )
max_value = 1.0
step = 0.01
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Setting" type="Label" parent="AudioSettings/World"]
margin_left = 177.0
margin_top = 77.0
margin_right = 207.0
margin_bottom = 85.0
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "World"

[node name="MuteButton" type="CheckBox" parent="AudioSettings"]
margin_left = 210.0
margin_top = 175.0
margin_right = 242.0
margin_bottom = 207.0
focus_mode = 0
custom_icons/radio_checked = ExtResource( 13 )
custom_icons/checked = ExtResource( 13 )
custom_icons/radio_unchecked = ExtResource( 14 )
custom_icons/unchecked = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MuteText" type="Label" parent="AudioSettings"]
margin_left = 167.0
margin_top = 187.0
margin_right = 217.0
margin_bottom = 195.0
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Mute Game"

[node name="ResetButton" type="TextureButton" parent="AudioSettings"]
margin_left = 273.0
margin_top = 186.0
margin_right = 322.0
margin_bottom = 194.0
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 15 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="AudioSettings/ResetButton"]
margin_left = 3.0
margin_top = 2.0
margin_right = 91.0
margin_bottom = 10.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Reset to default"

[node name="VisualSettings" type="Control" parent="."]
visible = false
margin_right = 500.0
margin_bottom = 282.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VisualLabel" type="TextureRect" parent="VisualSettings"]
margin_left = 64.3491
margin_top = 90.302
margin_right = 137.349
margin_bottom = 111.302
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="VisualSettings"]
margin_left = 150.0
margin_top = 65.0
margin_right = 360.0
margin_bottom = 215.0
theme = ExtResource( 17 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="VisualSettings/ScrollContainer"]
margin_right = 210.0
margin_bottom = 500.0
rect_min_size = Vector2( 210, 500 )

[node name="Label" type="Label" parent="VisualSettings/ScrollContainer/Control"]
margin_top = 3.0
margin_right = 163.0
margin_bottom = 11.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "item collection messages"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemCollectionMessages" type="OptionButton" parent="VisualSettings/ScrollContainer/Control"]
margin_left = 143.0
margin_top = 2.0
margin_right = 229.0
margin_bottom = 20.0
rect_min_size = Vector2( 70, 0 )
rect_scale = Vector2( 0.5, 0.5 )
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.5
theme = ExtResource( 17 )
custom_fonts/font = ExtResource( 12 )
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="VisualSettings/ScrollContainer/Control"]
margin_left = 33.0
margin_top = 316.0
margin_right = 73.0
margin_bottom = 324.0
text = "bruhse"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlsSettings" type="Control" parent="."]
visible = false
margin_right = 500.0
margin_bottom = 282.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlsLabel" type="TextureRect" parent="ControlsSettings"]
margin_left = 64.489
margin_top = 112.213
margin_right = 137.489
margin_bottom = 133.213
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VisualButton" type="Button" parent="."]
pause_mode = 2
modulate = Color( 1, 1, 1, 0 )
margin_left = 64.0
margin_top = 90.0
margin_right = 137.0
margin_bottom = 111.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioButton" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 64.0
margin_top = 68.0
margin_right = 137.0
margin_bottom = 90.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlsButton" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 64.0
margin_top = 112.0
margin_right = 137.0
margin_bottom = 133.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 64.0
margin_top = 134.0
margin_right = 137.0
margin_bottom = 155.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="AudioSettings/Master/Slider" to="AudioSettings" method="_on_master_volume_changed"]
[connection signal="value_changed" from="AudioSettings/Interface/Slider" to="AudioSettings" method="_on_interface_volume_changed"]
[connection signal="value_changed" from="AudioSettings/Music/Slider" to="AudioSettings" method="_on_music_volume_changed"]
[connection signal="value_changed" from="AudioSettings/World/Slider" to="AudioSettings" method="_on_world_volume_changed"]
[connection signal="toggled" from="AudioSettings/MuteButton" to="AudioSettings" method="_on_MuteButton_toggled"]
[connection signal="pressed" from="AudioSettings/ResetButton" to="AudioSettings" method="_on_ResetButton_pressed"]
[connection signal="pressed" from="VisualButton" to="." method="_on_VisualButton_pressed"]
[connection signal="pressed" from="AudioButton" to="." method="_on_AudioButton_pressed"]
[connection signal="pressed" from="ControlsButton" to="." method="_on_ControlsButton_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
